--- a/Projects/p1/pom.xml
+++ b/Projects/p1/pom.xml
@@ -34,5 +34,10 @@
 			<artifactId>javax.servlet-api</artifactId>
 			<version>4.0.1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<version>2.9.8</version>
+		</dependency>
   </dependencies>	
 </project>
